--- a/BillTimeApp/BillTime/Controls/ClientControl.xaml
+++ b/BillTimeApp/BillTime/Controls/ClientControl.xaml
@@ -4,12 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BillTime.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="500" Background="White" Width="320">
+             mc:Ignorable="d"  Background="White" FontSize="18"
+             d:DesignHeight="425"  Width="290">
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -21,7 +20,7 @@
 
         <!-- Row 0 -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5 5 5 10">
-            <StackPanel>
+            <StackPanel Orientation="Vertical">
                 <TextBlock>Client</TextBlock>
                 <ComboBox x:Name="clientDropDown" Width="150" />
             </StackPanel>
@@ -31,7 +30,7 @@
 
         <!-- Row 1 -->
         <StackPanel Orientation="Vertical" Grid.Row="1" Margin="5 5 5 10">
-            <StackPanel Orientation="Vertical">
+            <StackPanel>
                 <TextBlock>Name</TextBlock>
                 <TextBox x:Name="nameTextbox"/>
             </StackPanel>
@@ -39,7 +38,7 @@
 
         <!-- Row 2 -->
         <StackPanel Orientation="Vertical" Grid.Row="2" Margin="5 5 5 10">
-            <StackPanel Orientation="Vertical">
+            <StackPanel>
                 <TextBlock>Email</TextBlock>
                 <TextBox x:Name="emailTextbox"/>
             </StackPanel>
@@ -70,7 +69,7 @@
                 <TextBox x:Name="billingIncrementTextbox"/>
             </StackPanel>
             <StackPanel Orientation="Vertical" >
-                <TextBlock>Round Up (minutes)</TextBlock>
+                <TextBlock>Round Up (min.)</TextBlock>
                 <TextBox x:Name="roundUpAfterXMinuteTextbox"/>
             </StackPanel>
         </StackPanel>
