--- a/BillTimeApp/BillTime/Controls/ClientControl.xaml
+++ b/BillTimeApp/BillTime/Controls/ClientControl.xaml
@@ -92,6 +92,10 @@
         </StackPanel>
 
         <!-- Row 6 -->
-        <Button x:Name="submitForm" Grid.Row="6" Padding="10 15" Margin="5 5 5 10" Width="100">Submit</Button>
+        <Button x:Name="submitForm" Grid.Row="6" Width="100"
+                Margin="5 5 5 10" Padding="5 10" 
+
+
+                >Submit</Button>
     </Grid>
 </UserControl>
