--- a/BillTimeApp/BillTime/Controls/ClientControl.xaml
+++ b/BillTimeApp/BillTime/Controls/ClientControl.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BillTime.Controls"
              mc:Ignorable="d"  Background="White" FontSize="18"
-             d:DesignHeight="450"  Width="290">
+             d:DesignHeight="500"  Width="290">
     <Grid>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -43,9 +44,17 @@
                 <TextBox x:Name="emailTextbox"/>
             </StackPanel>
         </StackPanel>
-
+        
         <!-- Row 3 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="5 5 5 10">
+        <StackPanel Orientation="Vertical" Grid.Row="3" Margin="5 5 5 10">
+            <StackPanel>
+                <TextBlock>Hourly Rate</TextBlock>
+                <TextBox x:Name="hourlyRateTextbox"/>
+            </StackPanel>
+        </StackPanel>  
+
+        <!-- Row 4 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="4" Margin="5 5 5 10">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -67,8 +76,8 @@
             </Grid>
         </StackPanel>
 
-        <!-- Row 4 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="4" Margin="5 5 5 10">
+        <!-- Row 5 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="5" Margin="5 5 5 10">
             <StackPanel Orientation="Vertical" Margin="0 0 10 0">
                 <TextBlock>Cut Off Number</TextBlock>
                 <TextBox x:Name="cutOffTextbox"/>
@@ -79,8 +88,8 @@
             </StackPanel>
         </StackPanel>
 
-        <!-- Row 5 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="5" Margin="5 5 5 10">
+        <!-- Row 6 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="6" Margin="5 5 5 10">
             <StackPanel Orientation="Vertical" Margin="0 0 10 0">
                 <TextBlock>Billing Increment</TextBlock>
                 <TextBox x:Name="billingIncrementTextbox"/>
@@ -91,8 +100,8 @@
             </StackPanel>
         </StackPanel>
 
-        <!-- Row 6 -->
-        <Button x:Name="submitForm" Grid.Row="6" Width="100"
+        <!-- Row 7 -->
+        <Button x:Name="submitForm" Grid.Row="7" Width="100"
                 Margin="5 5 5 10" Padding="5 10" 
                 >Submit</Button>
     </Grid>
