--- a/BillTimeApp/BillTime/Controls/ClientControl.xaml
+++ b/BillTimeApp/BillTime/Controls/ClientControl.xaml
@@ -5,10 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BillTime.Controls"
              mc:Ignorable="d"  Background="White" FontSize="18"
-             d:DesignHeight="500"  Width="290">
+             d:DesignHeight="550"  Width="290">
     <Grid>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -20,7 +22,11 @@
         </Grid.RowDefinitions>
 
         <!-- Row 0 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5 5 5 10">
+        <TextBlock FontSize="24" HorizontalAlignment="Center">Clients Info</TextBlock>
+
+
+        <!-- Row 1 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="5 5 5 10">
             <StackPanel Orientation="Vertical">
                 <TextBlock>Client</TextBlock>
                 <ComboBox x:Name="clientDropDown" Width="150" />
@@ -29,32 +35,32 @@
             <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>
         </StackPanel>
 
-        <!-- Row 1 -->
-        <StackPanel Orientation="Vertical" Grid.Row="1" Margin="5 5 5 10">
+        <!-- Row 2 -->
+        <StackPanel Orientation="Vertical" Grid.Row="2" Margin="5 5 5 10">
             <StackPanel>
                 <TextBlock>Name</TextBlock>
                 <TextBox x:Name="nameTextbox"/>
             </StackPanel>
         </StackPanel>
 
-        <!-- Row 2 -->
-        <StackPanel Orientation="Vertical" Grid.Row="2" Margin="5 5 5 10">
+        <!-- Row 3 -->
+        <StackPanel Orientation="Vertical" Grid.Row="3" Margin="5 5 5 10">
             <StackPanel>
                 <TextBlock>Email</TextBlock>
                 <TextBox x:Name="emailTextbox"/>
             </StackPanel>
         </StackPanel>
         
-        <!-- Row 3 -->
-        <StackPanel Orientation="Vertical" Grid.Row="3" Margin="5 5 5 10">
+        <!-- Row 4 -->
+        <StackPanel Orientation="Vertical" Grid.Row="4" Margin="5 5 5 10">
             <StackPanel>
                 <TextBlock>Hourly Rate</TextBlock>
                 <TextBox x:Name="hourlyRateTextbox"/>
             </StackPanel>
         </StackPanel>  
 
-        <!-- Row 4 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="4" Margin="5 5 5 10">
+        <!-- Row 5 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="5" Margin="5 5 5 10">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -76,8 +82,8 @@
             </Grid>
         </StackPanel>
 
-        <!-- Row 5 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="5" Margin="5 5 5 10">
+        <!-- Row 6 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="6" Margin="5 5 5 10">
             <StackPanel Orientation="Vertical" Margin="0 0 10 0">
                 <TextBlock>Cut Off Number</TextBlock>
                 <TextBox x:Name="cutOffTextbox"/>
@@ -88,8 +94,8 @@
             </StackPanel>
         </StackPanel>
 
-        <!-- Row 6 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="6" Margin="5 5 5 10">
+        <!-- Row 7 -->
+        <StackPanel Orientation="Horizontal" Grid.Row="7" Margin="5 5 5 10">
             <StackPanel Orientation="Vertical" Margin="0 0 10 0">
                 <TextBlock>Billing Increment</TextBlock>
                 <TextBox x:Name="billingIncrementTextbox"/>
@@ -100,9 +106,9 @@
             </StackPanel>
         </StackPanel>
 
-        <!-- Row 7 -->
-        <Button x:Name="submitForm" Grid.Row="7" Width="100"
-                Margin="5 5 5 10" Padding="5 10" 
+        <!-- Row 8 -->
+        <Button x:Name="submitForm" Grid.Row="8" Width="100"
+                Margin="5 5 5 15" Padding="5 5" 
                 >Submit</Button>
     </Grid>
 </UserControl>
