--- a/BillTimeApp/BillTime/Controls/DefaultsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/DefaultsControl.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -76,7 +77,7 @@
 
         <!-- Row 5 -->
         <Button x:Name="submitForm" Grid.Row="5" Width="100"
-                Margin="5 5 5 10" Padding="5 10" 
+                Margin="5 5 5 15" Padding="5 5" 
                 >Submit</Button>
 
     </Grid>
