--- a/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
@@ -29,11 +29,14 @@
         </StackPanel>
 
         <!-- Row 2 -->
-        <StackPanel Orientation="Vertical" Grid.Row="2" Margin="5 5 5 10">
-            <TextBlock>Date</TextBlock>
-            <ComboBox x:Name="dateDropDown"/>
-            <!--<Button x:Name="editButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom">Edit</Button>
-            <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>-->
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5 5 5 10">
+
+            <StackPanel Orientation="Vertical">
+                <TextBlock>Date</TextBlock>
+                <ComboBox x:Name="dateDropDown" Width="150" />
+            </StackPanel>
+            <Button x:Name="addButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom">Edit</Button>
+            <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>
         </StackPanel>
 
         <!-- Row 3 -->
