--- a/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
 
         <!-- Row 0 -->
-        <TextBlock FontSize="24" HorizontalAlignment="Center">Payments Info</TextBlock>
+        <TextBlock FontSize="24" HorizontalAlignment="Center">Payments</TextBlock>
 
         <!-- Row 1 -->
         <StackPanel Orientation="Vertical" Grid.Row="1" Margin="5 5 5 10">
@@ -35,8 +35,8 @@
                 <TextBlock>Date</TextBlock>
                 <ComboBox x:Name="dateDropDown" Width="150" />
             </StackPanel>
-            <Button x:Name="addButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom">Edit</Button>
-            <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>
+            <TextBlock VerticalAlignment="Bottom" Margin="10 0 0 5">-Or-</TextBlock>
+            <Button x:Name="newButton" Padding="5 2" Margin="10 0 5 0" VerticalAlignment="Bottom">New</Button>
         </StackPanel>
 
         <!-- Row 3 -->
@@ -55,7 +55,6 @@
         <Button x:Name="submitForm" Grid.Row="5" Width="100"
                 Margin="5 5 5 15" Padding="5 5" 
                 >Submit</Button>
-
 
 
     </Grid>
