--- a/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
 
         <!-- Row 0 -->
-        <TextBlock FontSize="24" HorizontalAlignment="Center">Payments</TextBlock>
+        <TextBlock FontSize="24" HorizontalAlignment="Center" Grid.Row="0">Payments</TextBlock>
 
         <!-- Row 1 -->
         <StackPanel Orientation="Vertical" Grid.Row="1" Margin="5 5 5 10">
