--- a/BillTimeApp/BillTime/Controls/WorkControl.xaml
+++ b/BillTimeApp/BillTime/Controls/WorkControl.xaml
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
 
         <!-- Row 0 -->
-        <TextBlock FontSize="24" HorizontalAlignment="Center">Client Work</TextBlock>
+        <TextBlock FontSize="24" HorizontalAlignment="Center" Grid.Row="0">Client Work</TextBlock>
 
         <!-- Row 1 -->
         <StackPanel Orientation="Vertical" Grid.Row="1" Margin="5 5 5 10">
