--- a/BillTimeApp/BillTime/Controls/DefaultsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/DefaultsControl.xaml
@@ -77,7 +77,7 @@
 
         <!-- Row 5 -->
         <Button x:Name="submitForm" Grid.Row="5" Width="100"
-                Margin="5 5 5 15" Padding="5 5" 
+                Margin="5 5 5 15" Padding="5 5" Click="submitForm_Click"
                 >Submit</Button>
 
     </Grid>
