--- a/BillTimeApp/BillTime/Controls/ClientControl.xaml
+++ b/BillTimeApp/BillTime/Controls/ClientControl.xaml
@@ -27,12 +27,12 @@
 
         <!-- Row 1 -->
         <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="5 5 5 10">
-            <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Vertical" x:Name="clientStackPanel">
                 <TextBlock>Client</TextBlock>
                 <ComboBox x:Name="clientDropDown" Width="150" />
             </StackPanel>
-            <Button x:Name="editButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom">Edit</Button>
-            <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>
+            <Button x:Name="editButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom" Click="editButton_Click">Edit</Button>
+            <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom" Click="newButton_Click">New</Button>
         </StackPanel>
 
         <!-- Row 2 -->
