--- a/BillTimeApp/BillTime/Controls/ClientControl.xaml
+++ b/BillTimeApp/BillTime/Controls/ClientControl.xaml
@@ -108,7 +108,7 @@
 
         <!-- Row 8 -->
         <Button x:Name="submitForm" Grid.Row="8" Width="100"
-                Margin="5 5 5 15" Padding="5 5" 
+                Margin="5 5 5 15" Padding="5 5" Click="submitForm_Click" 
                 >Submit</Button>
     </Grid>
 </UserControl>
