--- a/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
@@ -29,7 +29,7 @@
         </StackPanel>
 
         <!-- Row 2 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5 5 5 10">
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5 5 5 10" x:Name="dateStackPanel">
 
             <StackPanel Orientation="Vertical">
                 <TextBlock>Date</TextBlock>
@@ -40,22 +40,28 @@
         </StackPanel>
 
         <!-- Row 3 -->
-        <StackPanel Orientation="Vertical" Grid.Row="3" Margin="5 5 5 10">
+        <StackPanel Orientation="Vertical" Grid.Row="3" Margin="5 5 5 10" x:Name="amountStackPanel">
             <TextBlock>Amount</TextBlock>
             <TextBox x:Name="amountTextBox"/>
         </StackPanel>
 
         <!-- Row 4 -->
-        <StackPanel Orientation="Vertical" Grid.Row="4" Margin="5 5 5 10">
+        <StackPanel Orientation="Vertical" Grid.Row="4" Margin="5 5 5 10" x:Name="hoursStackPanel">
             <TextBlock>Hours</TextBlock>
             <TextBox x:Name="hoursTextBox"/>
         </StackPanel>
 
         <!-- Row 5 -->
-        <Button x:Name="submitForm" Grid.Row="5" Width="100"
-                Margin="5 5 5 15" Padding="5 5" 
+        <StackPanel Grid.Row="5" Orientation="Horizontal" x:Name="buttonStackPanel">
+            <Grid>
+                <Button x:Name="submitForm" Width="130" FontSize="20"
+                Margin="50,5,23,15" Padding="5 5" 
                 >Submit</Button>
-
-
+            </Grid>
+            <Grid>
+                <Button x:Name="clearForm" Width="50" FontSize="14"
+                Margin="1,11,9,19">Clear</Button>
+            </Grid>
+        </StackPanel>
     </Grid>
 </UserControl>
