--- a/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
@@ -23,20 +23,20 @@
         <!-- Row 1 -->
         <StackPanel Orientation="Vertical" Grid.Row="1" Margin="5 5 5 10">
             <TextBlock>Client</TextBlock>
-            <ComboBox x:Name="clientDropDown"/>
+            <ComboBox x:Name="clientDropDown" SelectionChanged="clientDropDown_SelectionChanged"/>
             <!--<Button x:Name="editButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom">Edit</Button>
             <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>-->
         </StackPanel>
 
         <!-- Row 2 -->
-        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5 5 5 10" x:Name="dateStackPanel">
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5 5 5 10" x:Name="selectionStackPanel">
 
-            <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Vertical" x:Name="dateStackPanel">
                 <TextBlock>Date</TextBlock>
                 <ComboBox x:Name="dateDropDown" Width="150" />
             </StackPanel>
-            <TextBlock VerticalAlignment="Bottom" Margin="10 0 0 5">-Or-</TextBlock>
-            <Button x:Name="newButton" Padding="5 2" Margin="10 0 5 0" VerticalAlignment="Bottom">New</Button>
+            <TextBlock VerticalAlignment="Bottom" Margin="10 0 0 5" x:Name="orTextBlock">-Or-</TextBlock>
+            <Button x:Name="newButton" Padding="5 2" Margin="10 0 5 0" VerticalAlignment="Bottom" Click="newButton_Click">New</Button>
         </StackPanel>
 
         <!-- Row 3 -->
