--- a/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
+++ b/BillTimeApp/BillTime/Controls/PaymentsControl.xaml
@@ -33,7 +33,7 @@
 
             <StackPanel Orientation="Vertical" x:Name="dateStackPanel">
                 <TextBlock>Date</TextBlock>
-                <ComboBox x:Name="dateDropDown" Width="150" />
+                <ComboBox x:Name="dateDropDown" Width="150" SelectionChanged="dateDropDown_SelectionChanged"/>
             </StackPanel>
             <TextBlock VerticalAlignment="Bottom" Margin="10 0 0 5" x:Name="orTextBlock">-Or-</TextBlock>
             <Button x:Name="newButton" Padding="5 2" Margin="10 0 5 0" VerticalAlignment="Bottom" Click="newButton_Click">New</Button>
