--- a/BillTimeApp/BillTime/Controls/MainControl.xaml
+++ b/BillTimeApp/BillTime/Controls/MainControl.xaml
@@ -25,14 +25,33 @@
             <TextBlock FontSize="20">Client</TextBlock>
             <ComboBox x:Name="clientDropDown" SelectionChanged="clientDropDown_SelectionChanged" />
         </StackPanel>
-    
+
         <!-- Row 2 -->
         <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5 5 5 10">
             <StackPanel Orientation="Vertical" Margin="0 0 20 0">
                 <TextBlock>Hours</TextBlock>
                 <TextBox x:Name="hoursTextbox" Height="31" Width="66"/>
             </StackPanel>
-            <Button x:Name="operateTime" Padding="15 0" Margin="0 20 0 5" Click="operateTime_Click">Start Timer</Button>
+            <Button x:Name="operateTime" Padding="15 0" Margin="5 20 5 0" Background="Green" Click="operateTime_Click">
+                <!--<Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Background" Value="Green" />
+                        <Style.Triggers>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="Red" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>-->
+                Start Timer
+            </Button>
         </StackPanel>
 
         <!-- Row 3 -->
@@ -45,11 +64,11 @@
 
         <!-- Row 4 -->
         <StackPanel Orientation="Vertical" Grid.Row="4" Margin="5 5 5 10">
-                <TextBlock>Description</TextBlock>
-                <TextBox x:Name="descriptionTextbox" TextWrapping="Wrap"
+            <TextBlock>Description</TextBlock>
+            <TextBox x:Name="descriptionTextbox" TextWrapping="Wrap"
                          AcceptsReturn="True" Height="80"/>
         </StackPanel>
-        
+
         <!-- Row 5 -->
         <Button x:Name="submitForm" Grid.Row="5" Width="100"
                 Margin="5 5 5 15" Padding="5 5" 
